Fixed spacing on home page

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -12,6 +12,7 @@
 @media (width < 1150px) {
   .profile {
     flex-direction: column-reverse;
+    justify-content: start;
     gap: 2rem;
   }
 }
